--- a/components/Form/Form.module.css
+++ b/components/Form/Form.module.css
@@ -1,91 +1,39 @@
-.background {
-  background-color: #d9d9d99a;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 5;
-}
 .form {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 2rem;
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 2rem 2rem;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 2rem;
-  z-index: 6;
-}
-.title {
-  text-align: center;
-  font-size: 2.5rem;
-  font-weight: 400;
-  color: #5f5f5f;
+  color: white;
+  margin-top: 0.5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 .form label {
   display: block;
   font-size: 1.5rem;
-  padding: 5px 10px;
-  color: #5f5f5f;
+  padding: 10px 10px 5px;
 }
 .form input[type="text"] {
   width: 100%;
-  border-radius: 2rem;
-  border: 2px solid #979797;
+  border-radius: 1rem;
+  border: none;
   padding: 0.5rem;
+  outline: none;
+  grid-column: span 2;
 }
 .form textarea {
-  border-radius: 2rem;
-  border: 2px solid #979797;
-  width: 25rem;
-  height: 8rem;
+  border-radius: 1rem;
+  border: none;
+  height: 4rem;
   padding: 1rem;
+  width: 100%;
+  grid-column: span 2;
+  outline: none;
 }
 .gray {
   background-color: #d9d9d9bd;
 }
-.form input[type="radio"] {
-  display: none;
-}
-.form input[type="radio"]:checked + .gray {
-  outline: 2px solid #d9d9d9;
-  outline-offset: 2px;
-  background-color: #d9d9d99c;
-}
-.red {
-  background-color: rgba(255, 0, 0, 0.7);
-}
-.form input[type="radio"]:checked + .red {
-  outline: 2px solid rgb(255, 0, 0);
-  outline-offset: 2px;
-  background-color: rgb(255, 0, 0);
-}
-.blue {
-  background-color: rgba(0, 238, 255, 0.7);
-}
-.form input[type="radio"]:checked + .blue {
-  outline: 2px solid rgba(0, 238, 255);
-  outline-offset: 2px;
-  background-color: rgba(0, 238, 255);
-}
-.green {
-  background-color: rgba(0, 255, 0, 0.7);
-}
-.form input[type="radio"]:checked + .green {
-  outline: 2px solid rgba(0, 255, 0);
-  outline-offset: 2px;
-  background-color: rgba(0, 255, 0);
-}
-.yellow {
-  background-color: rgba(251, 255, 0, 0.7);
-}
-.form input[type="radio"]:checked + .yellow {
-  outline: 2px solid rgba(251, 255, 0);
-  outline-offset: 2px;
-  background-color: rgba(251, 255, 0);
-}
+
 .form .label {
   display: inline-block;
   margin: 0.9rem;
@@ -93,14 +41,18 @@
   height: 3rem;
   border-radius: 1rem;
 }
+.addInformation{
+  grid-column: span 2;
+}
 .form button {
   display: block;
-  padding: 1rem 3rem;
-  margin: 0 auto;
+  padding: 1rem 9rem;
+  margin: 1rem auto 0;
   border: none;
-  background: rgba(5, 255, 0, 0.8);
+  background: #308aff;
   color: white;
   border-radius: 1rem;
+  grid-column: span 2;
 }
 .span {
   position: absolute;
@@ -109,28 +61,17 @@
   left: 2.8rem;
   font-weight: 600;
 }
+.exit {
+  margin-left: auto;
+  fill: #ff8181;
+  cursor: pointer;
+}
 @media (min-width: 700px) {
-  .form {
-    width: 60rem;
-    padding: 4rem 8rem;
-  }
-  .form textarea {
-    width: 100%;
-    margin-bottom: 2rem;
-    height: 8rem;
-  }
-  .form input {
-    margin-bottom: 2rem;
-  }
   .form .label {
     margin: 0.9rem 1.9rem;
     width: 5rem;
     height: 5rem;
     border-radius: 1rem;
-  }
-  .form button {
-    padding: 1.5rem 6rem;
-    margin: 1.5rem auto 0 auto;
   }
   .span {
     bottom: 9.5rem;
