--- a/components/Form/BtnForm.module.css
+++ b/components/Form/BtnForm.module.css
@@ -1,23 +1,12 @@
 .btn {
-  width: 5rem;
-  height: 5rem;
-  border-radius: 20rem;
-  background-color: #22ff00cb;
+  width: 100%;
+  border-radius: 2rem;
+  background-color: rgba(48, 138, 255, 0.6);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  position: fixed;
-  bottom: 2rem;
-  right: 0.5rem;
   border: none;
+  padding: 0.5rem;
   cursor: pointer;
 }
 .svg {
   fill: white;
-}
-@media (min-width: 700px) {
-  .btn {
-    right: 6%;
-    bottom: 8%;
-    width: 8rem;
-    height: 8rem;
-  }
 }
