--- a/components/Home/Arrow.module.css
+++ b/components/Home/Arrow.module.css
@@ -1,6 +1,12 @@
 .arrow {
-  fill: #a0a0a0;
+  fill: #fff;
   background-color: transparent;
   border: none;
   cursor: pointer;
+  z-index: 10;
+}
+@media (min-width: 700px) {
+  .arrow {
+    display: none;
+  }
 }
