--- a/components/Home/MainPage.module.css
+++ b/components/Home/MainPage.module.css
@@ -3,14 +3,111 @@
   font-weight: 400;
   display: inline-block;
 }
+.weekContainer {
+  background: rgba(0, 0, 0, 0.2);
+  -webkit-backdrop-filter: blur(50px);
+  backdrop-filter: blur(10px);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  padding: 1rem;
+  width: 32rem;
+  margin: 2rem auto;
+  max-height: 37rem;
+  overflow: hidden;
+}
+.weekContainer h2 {
+  display: none;
+}
 .container {
   display: flex;
   justify-content: space-between;
-  padding: 2.5rem;
   align-items: center;
+  overflow: hidden;
+}
+.weekdays {
+  position: absolute;
+  display: flex;
+  left: 0;
+  width: 700%;
+}
+.day {
+  width: 100vw;
+  font-size: 1.3rem;
+  color: rgb(255, 255, 255);
+  letter-spacing: 2px;
+  cursor: pointer;
+  text-align: center;
+}
+.dateContainer {
+  display: none;
 }
 @media (min-width: 700px) {
-  .date {
-    font-size: 2rem;
+  .ContainerAll {
+    display: grid;
+    grid-template-columns: 20rem 50rem;
+    width: 72rem;
+    margin: 0 auto;
+    gap: 2rem;
+    grid-template-rows: 32rem 22rem;
+  }
+  .weekContainer {
+    height: 30rem;
+    width: 20rem;
+  }
+  .weekContainer h2 {
+    padding: 0.4rem 0 0 1.8rem;
+    font-size: 2.2rem;
+    color: white;
+    letter-spacing: 2px;
+    display: block;
+    font-weight: 400;
+  }
+  .weekdays {
+    flex-direction: column;
+    width: auto;
+    align-items: start;
+    position: inherit;
+    height: 100%;
+    justify-content: space-around;
+    transform: translateX(0rem) !important;
+  }
+  .container {
+    height: 90%;
+    align-items: start;
+    flex-direction: column;
+    padding-left: 2rem;
+  }
+  .dateContainer {
+    background: rgba(0, 0, 0, 0.2);
+    -webkit-backdrop-filter: blur(50px);
+    backdrop-filter: blur(10px);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    padding: 1rem;
+    width: 20rem;
+    max-height: 21rem;
+    display: grid;
+    place-content: center;
+  }
+  .dateContainer h4 {
+    font-size: 4rem;
+    color: white;
+    font-weight: 400;
+  }
+  .day {
+    width: auto;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.8);
+  }
+  .active {
+    color: white;
+    font-weight: 600;
+  }
+}
+@media (min-width: 1000px) {
+  .ContainerAll {
+    grid-template-columns: 20rem 72rem;
+    width: 94rem;
+    grid-template-rows: 32rem 22rem;
   }
 }
