--- a/components/UI/Card.module.css
+++ b/components/UI/Card.module.css
@@ -1,15 +1,27 @@
 .card {
-  background: #fffefe;
+  background: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(50px);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
-  margin: 5% 10%;
-  min-height: 89vh;
-  padding: 1.5rem;
+  padding: 1rem;
+  max-width: 40rem;
+  min-width: 36rem;
+  margin: 2rem auto;
+  height: 65vh;
+  overflow: auto;
 }
+
 @media (min-width: 700px) {
   .card {
-    margin: 0 10% 1.5% 10%;
-    min-height: 70vh;
-    padding: 1rem;
+    height: 53rem;
+    width: 50rem;
+    padding: 1rem 2rem;
+    grid-row: span 2;
+    max-width: 50rem;
+  }
+}
+@media (min-width: 1000px) {
+  .card {
+    height: 53rem;
   }
 }
