--- a/components/Week/Week.module.css
+++ b/components/Week/Week.module.css
@@ -1,80 +1,119 @@
 .container {
-  background: #fffefe;
+  background: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(50px);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
-  margin: 5% 10%;
-  padding: 1.5rem;
-  min-height: 22rem;
-  cursor: pointer;
+  padding: 1rem;
+  max-width: 90rem;
+  margin: 2rem auto;
+  height: 53rem;
+  overflow: auto;
+  text-align: center;
+  align-items: center;
+  display: grid;
+}
+.container h3 {
+  font-size: 2.3rem;
+  color: white;
+  font-weight: 600;
 }
 .container h4 {
-  text-align: center;
   font-size: 1.5rem;
-  padding: 1rem 0;
-  font-weight: 300;
+  color: white;
+  font-weight: 400;
 }
-.title {
-  text-align: center;
-  font-size: 1.4rem;
+.container span {
+  font-size: 1.5rem;
+  color: white;
   font-weight: 300;
-  margin: 4px 0;
+  display: block;
+}
+.graphic {
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 16rem;
+  border-radius: 2rem;
+  display: grid;
+  place-content: center;
+  gap: 0.5rem;
   padding: 1rem;
+  grid-template-columns: 1fr 3fr 1fr;
+  align-items: center;
+  margin: 0 auto;
 }
-.gray {
-  background-color: #d9d9d9;
+.graphicContainer {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+  grid-column: span 3;
+  margin: 0 auto;
 }
-.red {
-  background-color: rgb(255, 0, 0);
+.graphicContainer::after {
+  content: "";
+  display: block;
+  width: 8rem;
+  border-radius: 50%;
+  height: 8rem;
+  margin: 1rem;
+  background-color: rgb(85 84 84);
+  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.2);
 }
-.blue {
-  background-color: rgb(0, 238, 255);
+.completed {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: rgba(94, 255, 0, 0.8);
 }
-.green {
-  background-color: rgb(0, 255, 0);
+.progress {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 0, 0.8);
 }
-.yellow {
-  background-color: rgb(251, 255, 0);
+.not {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: rgba(255, 0, 0, 0.8);
 }
-.not-found {
-  text-align: center;
-  font-size: 1.3rem;
-  font-weight: 300;
-  padding: 3rem;
-  color: #7e7e7e;
+.graphic h4 {
+  font-size: 1.1rem;
+}
+.graphic span {
+  font-size: 1.1rem;
+}
+.graphicLabel {
+  grid-column: span 3;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
 }
 @media (min-width: 700px) {
-  .week {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+  .container {
+    width: 70rem;
+    grid-template-columns: repeat(4, 1fr);
   }
-  .container:last-child {
-    grid-column: 2;
+  .container h3 {
+    grid-column: span 4;
   }
-}
-@media (min-width: 1000px) {
-  .week {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
+  .informationContainer span{
+    padding-top: 1rem;
   }
-  .container:first-child {
-    grid-column: 1/3;
+  .graphic {
+    grid-column: span 4;
+    width: 50rem;
+    grid-template-columns: 1fr 1fr;
+    padding: 2rem;
   }
-  .container:nth-child(2) {
-    grid-column: 3/5;
+  .graphicContainer {
+    grid-column: span 1;
+    grid-row: span 3;
+    width: 15rem;
+    height: 15rem;
   }
-  .container:nth-child(3) {
-    grid-column: 5/7;
+  .graphicLabel {
+    grid-column: span 1;
   }
-  .container:nth-child(4) {
-    grid-column: 7/9;
-  }
-  .container:nth-child(5) {
-    grid-column: 2/4;
-  }
-  .container:nth-child(6) {
-    grid-column: 4/6;
-  }
-  .container:nth-child(7) {
-    grid-column: 6/8;
+  .graphicContainer::after {
+    width: 13rem;
+    height: 13rem;
   }
 }
