--- a/components/goals/Goals.module.css
+++ b/components/goals/Goals.module.css
@@ -1,47 +1,30 @@
 .container {
-  display: flex;
+  background: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(50px);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  padding: 1rem;
+  max-width: 90rem;
+  margin: 2rem auto;
+  height: 53rem;
+  overflow-y: auto;
+  overflow-x: hidden;
+  text-align: center;
   align-items: center;
-  justify-content: space-around;
-  width: 60vw;
-  background-color: #ffd90088;
-  margin: 1rem auto;
-  border-radius: 2rem;
-  padding: 1rem 0.5rem;
+  display: grid;
+  grid-template-rows: 4rem 1fr;
 }
-.achieved {
-  background-color: #ffd900;
-}
-.svg {
-  fill: white;
-}
-.progress {
-  width: 30vw;
-  height: 2rem;
-  border: 3px solid white;
-  border-radius: 2rem;
-  background: linear-gradient(to right, #ffd900 50%, white 50%);
-}
-.goal {
+.container h3 {
+  font-size: 1.8rem;
   color: white;
-  font-size: 1.3rem;
+  font-weight: 600;
 }
-
-@media (min-width: 750px) {
-  .todoContainer {
-    height: 100%;
-    padding: 3rem 0;
-    display: grid;
-    grid-template-columns: repeat(3, 18rem);
-    gap: 2rem;
-    justify-content: center;
-  }
+.taskContainer {
+  height: 100%;
+  grid-template-rows: 3rem;
+}
+@media (min-width: 700px) {
   .container {
-    padding: 2rem 1.5rem;
-  }
-}
-@media (min-width: 1350px) {
-  .todoContainer {
-    grid-template-columns: repeat(5, 18rem);
-    gap: 3rem;
+    width: 70rem;
   }
 }
