--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
 html,
 body {
   font-size: 10px;
-  background-color: #d9d9d9;
+  background-image: url(../img/pexels-vecislavas-popa-1571458.jpg);
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: grid;
+  place-content: center;
 }
 * {
   box-sizing: border-box;
@@ -20,4 +26,19 @@ body {
     color: white;
     background: black;
   }
+}
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
+  margin: 1.5rem;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 2rem;
 }
