--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 html,
 body {
   font-size: 10px;
-  background-image: url(../img/pexels-vecislavas-popa-1571458.jpg);
+  background-image: url(../img/background.jpg);
   background-size: cover;
   width: 100vw;
   height: 100vh;
