--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
-html,
-body {
+html {
   font-size: 10px;
+}
+body {
   background-image: url(../img/background2.jpg);
   background-size: cover;
   width: 100vw;
