--- a/components/UI/Card.module.css
+++ b/components/UI/Card.module.css
@@ -5,9 +5,9 @@
   border-radius: 20px;
   padding: 1rem;
   max-width: 40rem;
-  min-width: 36rem;
+  min-width: 32rem;
   margin: 2rem auto;
-  height: 65vh;
+  height: 43rem;
   overflow: auto;
 }
 
