--- a/components/Home/ToDoList.module.css
+++ b/components/Home/ToDoList.module.css
@@ -3,7 +3,7 @@
 }
 .todo {
   background-color: rgba(0, 0, 0, 0.2);
-  padding: 2rem;
+  padding: 1rem 0;
   margin: 2rem auto;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 2rem;
