--- a/components/Week/Week.module.css
+++ b/components/Week/Week.module.css
@@ -4,6 +4,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
   padding: 1rem;
+  width:32rem;
   max-width: 90rem;
   margin: 2rem auto;
   height: 52.1rem;
