--- a/components/goals/Goals.module.css
+++ b/components/goals/Goals.module.css
@@ -5,6 +5,7 @@
   border-radius: 20px;
   padding: 1rem;
   max-width: 90rem;
+  width:32rem;
   margin: 2rem auto;
   height: 52.1rem;
   overflow-y: auto;
